test/libsolidity/syntaxTests/constructor/constructor_without_implementation.sol
contract C {
	constructor() public;
}
// ----
// TypeError 5700: (14-35): Constructor must be implemented if declared.
